[gd_scene format=3 uid="uid://4jxkelyxt1ni"]

[ext_resource type="Script" uid="uid://mebbaa4j3j15" path="res://ui/pause.gd" id="1_fhtog"]
[ext_resource type="FontFile" uid="uid://cn0sfewu16dwl" path="res://assets/fonts/NotoSerif-Black.ttf" id="2_xceln"]
[ext_resource type="Texture2D" uid="uid://ce33v13jk0cke" path="res://assets/images/ui/button/button-normal.png" id="3_d0mqy"]
[ext_resource type="Texture2D" uid="uid://bykljhm8s40v7" path="res://assets/images/ui/button/button-activated.png" id="4_4qqgm"]
[ext_resource type="Texture2D" uid="uid://bpe34ahdjximk" path="res://assets/images/ui/button/button-hover.png" id="5_exhcj"]
[ext_resource type="Texture2D" uid="uid://cin8vv7q3m6jp" path="res://assets/images/ui/button/button-focused.png" id="6_17sbs"]
[ext_resource type="Texture2D" uid="uid://yjymfx5kvks0" path="res://assets/images/ui/check/on/check-normal.png" id="7_q6xb2"]
[ext_resource type="Texture2D" uid="uid://dim88rcqj1dfc" path="res://assets/images/ui/check/off/check-normal.png" id="8_kw25y"]

[node name="Pause" type="CanvasLayer" unique_id=726105523]
process_mode = 3
visible = false
script = ExtResource("1_fhtog")

[node name="Panel" type="Panel" parent="." unique_id=468019398]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=434120994]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -23.5
offset_right = 64.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="Panel/VBoxContainer" unique_id=1556753226]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xceln")
theme_override_font_sizes/font_size = 34
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="TextureButton" parent="Panel/VBoxContainer" unique_id=272695293]
layout_mode = 2
texture_normal = ExtResource("3_d0mqy")
texture_pressed = ExtResource("4_4qqgm")
texture_hover = ExtResource("5_exhcj")
texture_disabled = ExtResource("3_d0mqy")
texture_focused = ExtResource("6_17sbs")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/MenuButton" unique_id=1427840735]
layout_mode = 0
offset_right = 260.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/MenuButton/CenterContainer" unique_id=1720742790]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xceln")
theme_override_font_sizes/font_size = 48
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecordLabel" type="Label" parent="Panel/VBoxContainer" unique_id=1513195472]
layout_mode = 2
theme_override_colors/font_color = Color(0.74558026, 0.7455802, 0.7455802, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xceln")
theme_override_font_sizes/font_size = 12
text = "Record: %d (%d days)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="TextureButton" parent="Panel/VBoxContainer" unique_id=1441745923]
layout_mode = 2
texture_normal = ExtResource("3_d0mqy")
texture_pressed = ExtResource("4_4qqgm")
texture_hover = ExtResource("5_exhcj")
texture_disabled = ExtResource("3_d0mqy")
texture_focused = ExtResource("6_17sbs")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/ResumeButton" unique_id=153700297]
layout_mode = 0
offset_right = 260.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/ResumeButton/CenterContainer" unique_id=1211935396]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xceln")
theme_override_font_sizes/font_size = 48
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicCheck" type="CheckButton" parent="Panel/VBoxContainer" unique_id=2035610202]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.16565621, 0.16565639, 0.16565683, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.19793698, 0.19793728, 0.1979377, 1)
theme_override_colors/font_hover_pressed_color = Color(0.23392546, 0.23392546, 0.23392543, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xceln")
theme_override_font_sizes/font_size = 30
theme_override_icons/checked = ExtResource("7_q6xb2")
theme_override_icons/unchecked = ExtResource("8_kw25y")
theme_override_icons/checked_disabled = ExtResource("7_q6xb2")
theme_override_icons/unchecked_disabled = ExtResource("8_kw25y")
theme_override_icons/checked_mirrored = ExtResource("7_q6xb2")
theme_override_icons/unchecked_mirrored = ExtResource("8_kw25y")
theme_override_icons/checked_disabled_mirrored = ExtResource("7_q6xb2")
theme_override_icons/unchecked_disabled_mirrored = ExtResource("8_kw25y")
button_pressed = true
text = "Music"
flat = true
alignment = 1

[node name="SoundsCheck" type="CheckButton" parent="Panel/VBoxContainer" unique_id=464939455]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.16565621, 0.16565639, 0.16565683, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.19793698, 0.19793728, 0.1979377, 1)
theme_override_colors/font_hover_pressed_color = Color(0.23392546, 0.23392546, 0.23392543, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xceln")
theme_override_font_sizes/font_size = 30
theme_override_icons/checked = ExtResource("7_q6xb2")
theme_override_icons/unchecked = ExtResource("8_kw25y")
theme_override_icons/checked_disabled = ExtResource("7_q6xb2")
theme_override_icons/unchecked_disabled = ExtResource("8_kw25y")
theme_override_icons/checked_mirrored = ExtResource("7_q6xb2")
theme_override_icons/unchecked_mirrored = ExtResource("8_kw25y")
theme_override_icons/checked_disabled_mirrored = ExtResource("7_q6xb2")
theme_override_icons/unchecked_disabled_mirrored = ExtResource("8_kw25y")
button_pressed = true
text = "Sounds"
flat = true
alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MusicCheck" to="." method="_on_music_check_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SoundsCheck" to="." method="_on_sounds_check_pressed"]
